[package]
name = "openapi-chaos-client"
version = "1.0.0"
authors = ["support@qernal.com"]
description = "Management API - Central user exposed system"
# Override this license by providing a License Object in the OpenAPI.
license = "Unlicense"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
serde_qs = "^0.12"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
